<resources>
    <string name="app_name">Front_END_CURRENT</string>
    <string name="top_rectangle">top_rectangle</string>
    <string name="reminders">Reminders</string>
    <string name="schedule">Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminders_text">Reminders</string>
    <string name="schedule_text">Schedule</string>
    <string name="create_schedule_top_text">Create Schedule</string>
    <string name="class_name_input">Class Name</string>
    <string name="professor_name_input">Professor Name</string>
    <string name="section_input">Section</string>
    <string name="location_input">Location</string>
    <string name="room_input">Room</string>
    <string name="purple_rectangle_description">Purple rectangle on top of screen</string>
    <string name="select_days_of_week">Select days of week</string>
    <string name="start_time_box_left">Start (HH:MM)</string>
    <string name="end_right_box">End (HH:MM)</string>
    <string name="visual_image_box_for_all_pages">Visual image box for all pages.</string>
    <string name="clear_all_string">Clear All</string>
    <string name="confirm_button_string">Add Class</string>
</resources>